24° Commit (Correções e Alterações Finais no Código)