@@ -22,19 +22,19 @@ class CentralAtendimentoTest {
         CentralAtendimento.getInstance().limpar();
         catalogo = new CatalogoReceitas();
         List<Ingrediente> ingredientes = new ArrayList<>();
-        ingredientes.add(IngredienteFactory.getIngrediente("Pão Mediator", 120, false));
-        ingredientes.add(IngredienteFactory.getIngrediente("Carne Mediator", 280, false));
-        catalogo.cadastrarReceita(new ReceitaLanche("X-Mediator", ingredientes, 22.90f,
+        ingredientes.add(IngredienteFactory.getIngrediente("Wickbold – Pão Brioche para Hambúrguer", 120, false));
+        ingredientes.add(IngredienteFactory.getIngrediente("Swift – Hambúrguer Angus 180g", 280, false));
+        catalogo.cadastrarReceita(new ReceitaLanche("X-Burguer", ingredientes, 22.90f,
                 12, TecnicaPreparo.TRADICIONAL));
     }
 
     @Test
     void deveNotificarCozinhaApenasQuandoEmPreparo() {
         Pedido pedido = new PedidoBuilder()
-                .setCodigoPedido("PED-MED-001")
+                .setCodigoPedido("PED-001")
                 .setNomeCliente("Bruno")
                 .setEstrategiaFrete(new FreteFixo())
-                .addItem(new Lanche(catalogo.obterReceita("X-Mediator")))
+                .addItem(new Lanche(catalogo.obterReceita("X-Burguer")))
                 .build();
         CozinhaObserver cozinha = new CozinhaObserver(catalogo);
         CentralAtendimento.getInstance().acompanharPedido(pedido, cozinha);
@@ -47,10 +47,10 @@ class CentralAtendimentoTest {
     @Test
     void naoDeveNotificarCozinhaQuandoPronto() {
         Pedido pedido = new PedidoBuilder()
-                .setCodigoPedido("PED-MED-002")
+                .setCodigoPedido("PED-002")
                 .setNomeCliente("Carla")
                 .setEstrategiaFrete(new FreteFixo())
-                .addItem(new Lanche(catalogo.obterReceita("X-Mediator")))
+                .addItem(new Lanche(catalogo.obterReceita("X-Burguer")))
                 .build();
         CozinhaObserver cozinha = new CozinhaObserver(catalogo);
         CentralAtendimento.getInstance().acompanharPedido(pedido, cozinha);
@@ -65,10 +65,10 @@ class CentralAtendimentoTest {
     @Test
     void deveNotificarClienteECozinhaSimultaneamenteEmPreparo() {
         Pedido pedido = new PedidoBuilder()
-                .setCodigoPedido("PED-MED-003")
+                .setCodigoPedido("PED-003")
                 .setNomeCliente("Daniel")
                 .setEstrategiaFrete(new FreteFixo())
-                .addItem(new Lanche(catalogo.obterReceita("X-Mediator")))
+                .addItem(new Lanche(catalogo.obterReceita("X-Burguer")))
                 .build();
         AppClienteObserver cliente = new AppClienteObserver("Daniel");
         CozinhaObserver cozinha = new CozinhaObserver(catalogo);
@@ -77,17 +77,17 @@ class CentralAtendimentoTest {
 
         pedido.confirmarPreparo();
 
-        assertEquals("Atenção, Daniel, seu pedido PED-MED-003 se encontra no seguinte estado: Em Preparo", cliente.getUltimaNotificacao());
+        assertEquals("Atenção, Daniel, seu pedido PED-003 se encontra no seguinte estado: Em Preparo", cliente.getUltimaNotificacao());
         assertEquals(1, cozinha.getPainelCozinha().getHistorico().size());
     }
 
     @Test
     void deveCozinhaNaoAtuarQuandoCancelamentoForDeRecebido() {
         Pedido pedido = new PedidoBuilder()
-                .setCodigoPedido("PED-MED-004")
+                .setCodigoPedido("PED-004")
                 .setNomeCliente("Elisa")
                 .setEstrategiaFrete(new FreteFixo())
-                .addItem(new Lanche(catalogo.obterReceita("X-Mediator")))
+                .addItem(new Lanche(catalogo.obterReceita("X-Burguer")))
                 .build();
         CozinhaObserver cozinha = new CozinhaObserver(catalogo);
         CentralAtendimento.getInstance().acompanharPedido(pedido, cozinha);
@@ -101,10 +101,10 @@ class CentralAtendimentoTest {
     @Test
     void deveCozinhaDesfazerTarefaQuandoCanceladoEmPreparo() {
         Pedido pedido = new PedidoBuilder()
-                .setCodigoPedido("PED-MED-005")
+                .setCodigoPedido("PED-005")
                 .setNomeCliente("Felipe")
                 .setEstrategiaFrete(new FreteFixo())
-                .addItem(new Lanche(catalogo.obterReceita("X-Mediator")))
+                .addItem(new Lanche(catalogo.obterReceita("X-Burguer")))
                 .build();
         CozinhaObserver cozinha = new CozinhaObserver(catalogo);
         CentralAtendimento.getInstance().acompanharPedido(pedido, cozinha);
@@ -118,43 +118,43 @@ class CentralAtendimentoTest {
 
     @Test
     void deveRegistrarEventoNoHistoricoAoMudarEstado() {
-        Pedido pedido = new Pedido("PED-MED-006");
+        Pedido pedido = new Pedido("PED-006");
         AppClienteObserver cliente = new AppClienteObserver("Gabriela");
         CentralAtendimento.getInstance().acompanharPedido(pedido, cliente);
 
         pedido.confirmarPreparo();
 
-        assertEquals(1, CentralAtendimento.getInstance().getHistoricoPedido("PED-MED-006").size());
+        assertEquals(1, CentralAtendimento.getInstance().getHistoricoPedido("PED-006").size());
     }
 
     @Test
     void deveRegistrarDescricaoCorretaNoHistorico() {
-        Pedido pedido = new Pedido("PED-MED-007");
+        Pedido pedido = new Pedido("PED-007");
         AppClienteObserver cliente = new AppClienteObserver("Henrique");
         CentralAtendimento.getInstance().acompanharPedido(pedido, cliente);
 
         pedido.confirmarPreparo();
 
-        assertEquals("Pedido PED-MED-007 está: Em Preparo",
-                CentralAtendimento.getInstance().getHistoricoPedido("PED-MED-007").get(0));
+        assertEquals("Pedido PED-007 está: Em Preparo",
+                CentralAtendimento.getInstance().getHistoricoPedido("PED-007").getFirst());
     }
 
     @Test
     void deveRegistrarMultiplosEventosNoHistorico() {
-        Pedido pedido = new Pedido("PED-MED-008");
+        Pedido pedido = new Pedido("PED-008");
         AppClienteObserver cliente = new AppClienteObserver("Helena");
         CentralAtendimento.getInstance().acompanharPedido(pedido, cliente);
 
         pedido.confirmarPreparo();
         pedido.finalizarPreparo();
 
-        assertEquals(2, CentralAtendimento.getInstance().getHistoricoPedido("PED-MED-008").size());
+        assertEquals(2, CentralAtendimento.getInstance().getHistoricoPedido("PED-008").size());
     }
 
     @Test
     void deveManterHistoricosSeparadosPorPedido() {
-        Pedido pedido1 = new Pedido("PED-MED-009");
-        Pedido pedido2 = new Pedido("PED-MED-010");
+        Pedido pedido1 = new Pedido("PED-009");
+        Pedido pedido2 = new Pedido("PED-010");
         AppClienteObserver cliente1 = new AppClienteObserver("Igor");
         AppClienteObserver cliente2 = new AppClienteObserver("Julia");
         CentralAtendimento.getInstance().acompanharPedido(pedido1, cliente1);
@@ -164,45 +164,37 @@ class CentralAtendimentoTest {
         pedido2.confirmarPreparo();
         pedido2.finalizarPreparo();
 
-        assertEquals(1, CentralAtendimento.getInstance().getHistoricoPedido("PED-MED-009").size());
-        assertEquals(2, CentralAtendimento.getInstance().getHistoricoPedido("PED-MED-010").size());
+        assertEquals(1, CentralAtendimento.getInstance().getHistoricoPedido("PED-009").size());
+        assertEquals(2, CentralAtendimento.getInstance().getHistoricoPedido("PED-010").size());
     }
 
     @Test
     void deveRetornarExcecaoParaPedidoNuloEmAcompanharPedido() {
         AppClienteObserver cliente = new AppClienteObserver("Lucas");
-        try {
-            CentralAtendimento.getInstance().acompanharPedido(null, cliente);
-        } catch (IllegalArgumentException e) {
-            assertEquals("O pedido referenciado não pode ser nulo!", e.getMessage());
-        }
+        IllegalArgumentException e = assertThrows(IllegalArgumentException.class,
+                () -> CentralAtendimento.getInstance().acompanharPedido(null, cliente));
+        assertEquals("ERR01 - O pedido referenciado não pode ser nulo!", e.getMessage());
     }
 
     @Test
     void deveRetornarExcecaoParaObserverNuloEmAcompanharPedido() {
-        Pedido pedido = new Pedido("PED-MED-012");
-        try {
-            CentralAtendimento.getInstance().acompanharPedido(pedido, null);
-        } catch (IllegalArgumentException e) {
-            assertEquals("O observador referenciado não pode ser nulo!", e.getMessage());
-        }
+        Pedido pedido = new Pedido("PED-012");
+        IllegalArgumentException e = assertThrows(IllegalArgumentException.class,
+                () -> CentralAtendimento.getInstance().acompanharPedido(pedido, null));
+        assertEquals("ERR01 - O observador referenciado não pode ser nulo!", e.getMessage());
     }
 
     @Test
     void deveRetornarExcecaoParaCodigoNuloEmGetHistorico() {
-        try {
-            CentralAtendimento.getInstance().getHistoricoPedido(null);
-        } catch (IllegalArgumentException e) {
-            assertEquals("O código do pedido referenciado não pode ser nulo ou vazio!", e.getMessage());
-        }
+        IllegalArgumentException e = assertThrows(IllegalArgumentException.class,
+                () -> CentralAtendimento.getInstance().getHistoricoPedido(null));
+        assertEquals("ERR02 - O código do pedido referenciado não pode ser nulo ou vazio!", e.getMessage());
     }
 
     @Test
     void deveRetornarExcecaoParaCatalogoNuloNoCozinhaObserver() {
-        try {
-            new CozinhaObserver(null);
-        } catch (IllegalArgumentException e) {
-            assertEquals("O catálogo de receitas referenciado não pode ser nulo!", e.getMessage());
-        }
+        IllegalArgumentException e = assertThrows(IllegalArgumentException.class,
+                () -> new CozinhaObserver(null));
+        assertEquals("ERR01 - O catálogo de receitas referenciado não pode ser nulo!", e.getMessage());
     }
 }
